--- a/Common/src/main/resources/META-INF/mods.toml
+++ b/Common/src/main/resources/META-INF/mods.toml
@@ -1,14 +1,14 @@
 modLoader="javafml"
 loaderVersion="*"
 license="All rights reserved"
-issueTrackerURL="https://github.com/ricksouth/serilum-mc-mods/labels/Mod:%20Hidden%20Recipe%20Book"
+issueTrackerURL="https://github.com/Serilum/.issue-tracker/labels/Mod:%20Hidden%20Recipe%20Book"
 logoFile="icon.png"
 
 [[mods]]
 modId="hiddenrecipebook"
-version="4.3"
+version="4.4"
 displayName="Hidden Recipe Book"
-displayURL="https://curseforge.com/minecraft/mc-mods/hidden-recipe-book"
+displayURL="https://serilum.com/mod/hidden-recipe-book"
 authors="Rick South"
 description='''Hides the recipe book on crafting and furnace GUIs, toggleable via a hotkey.
 '''
@@ -21,13 +21,15 @@ If you would like to contribute too, check out https://ricksouth.com/donate. App
 
 [[dependencies.hiddenrecipebook]]
     modId="collective"
+    type="required"
     mandatory=true
-    versionRange="[7.5,)"
+    versionRange="[7.21,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.hiddenrecipebook]]
     modId="minecraft"
+    type="required"
     mandatory=true
     versionRange="[1.20.2]"
     ordering="NONE"
