--- a/Common/src/main/resources/META-INF/mods.toml
+++ b/Common/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ logoFile="icon.png"
 
 [[mods]]
 modId="hiddenrecipebook"
-version="4.6"
+version="4.7"
 displayName="Hidden Recipe Book"
 displayURL="https://serilum.com/mod/hidden-recipe-book"
 authors="Rick South"
@@ -14,7 +14,7 @@ description='''Hides the recipe book on crafting and furnace GUIs, toggleable vi
 '''
 credits='''Thank you very much to my Membership sponsors for supporting the development of this mod:  
 
-Alister, Andrean Olgo, aternosorg, Cherriesaurus, Jack, Kreezxil, Michael W. S., Mir3JonCZ, Shana Gitnick, Tyler Behl   
+Alister, Andrean Olgo, aternosorg, Cherriesaurus, Michael W. S., Nahuel Fernandez, Shana Gitnick, Tyler Behl   
 
 If you would like to contribute too, check out https://serilum.com/donate. Appreciate it! <3   
 '''
@@ -23,7 +23,7 @@ If you would like to contribute too, check out https://serilum.com/donate. Appre
     modId="collective"
     type="required"
     mandatory=true
-    versionRange="[7.36,)"
+    versionRange="[7.78,)"
     ordering="NONE"
     side="BOTH"
 
