--- a/Common/src/main/resources/META-INF/neoforge.mods.toml
+++ b/Common/src/main/resources/META-INF/neoforge.mods.toml
@@ -6,7 +6,7 @@ logoFile="icon.png"
 
 [[mods]]
 modId="hiddenrecipebook"
-version="4.6"
+version="4.7"
 displayName="Hidden Recipe Book"
 displayURL="https://serilum.com/mod/hidden-recipe-book"
 authors="Rick South"
@@ -14,7 +14,7 @@ description='''Hides the recipe book on crafting and furnace GUIs, toggleable vi
 '''
 credits='''Thank you very much to my Membership sponsors for supporting the development of this mod:  
 
-Alister, Andrean Olgo, aternosorg, BirdieMiner, Cherriesaurus, Jeremy Langford, Michael W. S., Rare Students, Shana Gitnick, Tyler Behl   
+Alister, Andrean Olgo, aternosorg, Cherriesaurus, Michael W. S., Nahuel Fernandez, Shana Gitnick, Tyler Behl   
 
 If you would like to contribute too, check out https://serilum.com/donate. Appreciate it! <3   
 '''
@@ -22,7 +22,7 @@ If you would like to contribute too, check out https://serilum.com/donate. Appre
 [[dependencies.hiddenrecipebook]]
     modId="collective"
     type="required"
-    versionRange="[7.61,)"
+    versionRange="[7.78,)"
     ordering="NONE"
     side="BOTH"
 
